Update with links to similar articles

--- a/content/note/2020-06-26-structuring-projects-r.html
+++ b/content/note/2020-06-26-structuring-projects-r.html
@@ -157,3 +157,10 @@ tags:
 </ul>
 </div>
 </div>
+<div id="more-thoughts-on-the-subject" class="section level2">
+<h2>More thoughts on the subject</h2>
+<ol style="list-style-type: decimal">
+<li><a href="https://www.r-bloggers.com/%F0%9F%93%81-project-oriented-workflow/">Iegor’s article</a></li>
+<li><a href="https://www.r-bloggers.com/structuring-r-projects/">Chris’s article</a></li>
+</ol>
+</div>
